# osrd

./: docker-compose.yml
.github/: CODEOWNERS
.github/scripts/: bake-metadata.py
.github/workflows/: api.yml  build.yml  integration_tests.yml
api/osrd_infra/: serializers.py
api/osrd_infra/management/commands/: json_schema.py  qgis_export.py  setup_dummy_db.py
api/osrd_infra/migrations/: 0001_initial.py  0002_add_electrical_profiles_to_schedules.py  0004_trainschedulemodel_options.py
api/osrd_infra/models/: electrical_profiles.py  generated.py  infra.py  path.py  rolling_stock.py  study.py  train_schedule.py
api/osrd_infra/tests/: test_projections.py
api/osrd_infra/views/: infra.py  pathfinding.py  railjson.py  study.py
api/osrd_infra/views/train_schedule/: standalone_simulation_report.py
core/: openapi.yaml
core/gradle/: libs.versions.toml
core/src/main/java/fr/sncf/osrd/api/: InfraManager.java
core/src/main/java/fr/sncf/osrd/conflicts/: SpacingResourceGenerator.kt
core/src/main/java/fr/sncf/osrd/standalone_sim/: StandaloneSim.java
core/src/main/kotlin/fr/sncf/osrd/graph/: Pathfinding.kt
core/src/main/kotlin/fr/sncf/osrd/sim_infra_adapter/: RawInfraFromRjsAdapter.kt
core_controller/: Cargo.toml
core_controller/src/: main.rs
docker/: docker-compose.host.yml
editoast/: Cargo.toml  Dockerfile  map_layers.yml  openapi.yaml  openapi_legacy.yaml
editoast/editoast_derive/: Cargo.toml
editoast/migrations/2023-12-26-152659_add_electrification_unit/: down.sql  up.sql
editoast/osrd_containers/: Cargo.toml
editoast/src/: fixtures.rs  main.rs  tables.rs
editoast/src/converters/: osm_to_railjson.rs  utils.rs
editoast/src/generated_data/error/: catenaries.rs
editoast/src/infra_cache/: mod.rs
editoast/src/map/: layers.rs  mod.rs  redis_utils.rs
editoast/src/modelsv2/: projects.rs  rolling_stock_model.rs  study.rs
editoast/src/schema/: errors.rs  geo_json.rs  mod.rs
editoast/src/tests/: example_rolling_stock_1.json  example_rolling_stock_2_energy_sources.json
editoast/src/views/: electrical_profiles.rs  mod.rs  projects.rs  study.rs
editoast/src/views/infra/: edition.rs  mod.rs
editoast/src/views/layers/: mod.rs  mvt_utils.rs
editoast/src/views/v2/: path.rs  train_schedule.rs
editoast/src/views/v2/path/: pathfinding.rs
front/: package.json  playwright.config.ts
front/public/locales/en/: simulation.json  translation.json
front/public/locales/fr/: simulation.json  translation.json
front/public/locales/fr/common/: common.json
front/public/locales/fr/operationalStudies/: manageTrainSchedule.json
front/scripts/: i18n-checker.ts
front/src/applications/editor/: Editor.tsx  Map.tsx
front/src/applications/editor/components/: EntitySumUp.tsx
front/src/applications/editor/tools/pointEdition/: consts.ts  tool-factory.tsx
front/src/applications/editor/tools/pointEdition/components/: PointEditionLayers.tsx
front/src/applications/editor/tools/rangeEdition/: consts.ts  types.ts
front/src/applications/editor/tools/rangeEdition/components/: RangeEditionTrackRangeList.tsx
front/src/applications/editor/tools/routeEdition/components/: WayPointInput.tsx
front/src/applications/editor/tools/trackEdition/: tool.tsx
front/src/applications/operationalStudies/components/: FilterTextField.tsx
front/src/applications/operationalStudies/views/: SimulationResults.tsx  Study.tsx
front/src/applications/referenceMap/: Map.tsx
front/src/applications/stdcm/: formatStdcmConf.ts
front/src/common/: types.ts
front/src/common/BootstrapSNCF/: DropdownSNCF.tsx  InputGroupSNCF.tsx
front/src/common/IntervalsDataViz/: utils.ts
front/src/common/Map/Layers/: Catenaries.tsx
front/src/common/Map/Search/: MapSearchOperationalPoint.tsx
front/src/common/Notifications/: Notifications.tsx
front/src/common/Pathfinding/: TypeAndPath.tsx
front/src/common/api/: osrdEditoastApi.ts
front/src/main/: app.jsx
front/src/modules/infra/components/InfraSelector/: InfraSelector.tsx  InfraSelectorModalBodyEdition.tsx
front/src/modules/project/components/: AddOrEditProjectModal.tsx
front/src/modules/rollingStock/: types.ts
front/src/modules/rollingStock/components/RollingStockEditor/: CurveSpreadsheet.tsx  formatSpreadSheetCurve.ts
front/src/modules/rollingStock/components/RollingStockSelector/: SearchRollingStock.tsx
front/src/modules/rollingStock/helpers/: curves.ts
front/src/modules/simulationResult/components/: SimulationResultsMap.tsx  SpaceCurvesSlopes.tsx
front/src/modules/simulationResult/components/ChartHelpers/: ChartHelpers.ts  enableInteractivity.tsx
front/src/modules/simulationResult/components/SpaceTimeChart/: ChartModal.tsx
front/src/modules/simulationResult/components/SpeedSpaceChart/: SpeedSpaceChart.tsx
front/src/modules/study/components/: AddOrEditStudyModal.tsx
front/src/modules/trainschedule/components/ImportTrainSchedule/: index.ts
front/src/modules/trainschedule/components/ManageTrainSchedule/: Map.tsx  PowerRestrictionsSelector.tsx
front/src/modules/trainschedule/components/ManageTrainSchedule/Itinerary/: Itinerary.tsx
front/src/reducers/osrdconf/: helpers.ts
front/src/reducers/osrdsimulation/: index.ts
front/src/styles/scss/applications/rollingStockEditor/: _rollingStockForm.scss
front/src/styles/scss/common/components/: _typeAndPath.scss
front/src/utils/: constants.ts  date.ts  geometry.ts  inputManipulation.ts
front/src/utils/__tests__/: constants.spec.ts
front/tests/: create-project-study-scenario.spec.ts
front/tests/pages/: home-page-model.ts
gateway/: Cargo.toml  Dockerfile
gateway/actix_auth/: Cargo.toml
gateway/actix_proxy/: Cargo.toml
osrd_schemas/osrd_schemas/: path.py
python/api/osrd_infra/models/: train_schedule.py
python/api/osrd_infra/views/train_schedule/: standalone_simulation_report.py  train_schedule.py
python/osrd_schemas/: pyproject.toml
python/railjson_generator/: pyproject.toml
tests/data/infras/small_infra/: infra.json
tests/fuzzer/: fuzzer.py
tests/infra-scripts/: small_infra.py
tests/tests/: test_e2e.py
(+36 files in other folders)
