[package]
name = "editoast"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"

[workspace]
members = [".", "editoast_derive", "osrd_containers"]

[workspace.dependencies]
rangemap = "1.4.0"
serde = "1.0.195"
serde_derive = "1.0.195"
serde_json = "1.0.115"
utoipa = { version = "4.2.0", features = ["actix_extras", "chrono", "uuid"] }

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-http = "3.5.1"
actix-multipart = "0.6.1"
actix-web = "4.4.1"
actix-web-opentelemetry = { version = "0.16.0", features = ["awc"] }
# For batch dependcy updates see https://osrd.fr/en/docs/guides/contribute/batch-updating-dependencies/

async-trait = "0.1.79"
cfg-if = "1.0.0"
chashmap = "2.2.2"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
colored = "2.1.0"
derivative = "2.2.0"
diesel = { version = "2.1.4", features = [
    "postgres",
    "serde_json",
    "chrono",
    "uuid",
] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
diesel_json = "0.2.1"
editoast_derive = { path = "./editoast_derive" }
enum-map = "2.7.3"
enumset = "1.1.3"
futures = "0.3.30"
futures-util = "*"
geos = { version = "8.3.0", features = ["json"] }
heck = "0.4.1"
image = "0.24.8"
inventory = "0.3"
iso8601 = "0.6.1"
itertools = "0.12.0"
json-patch = "1.2.0"
mvt = "0.9.0"
openssl = "*"
opentelemetry = "0.21.0"
opentelemetry-datadog = { version = "0.9.0", features = ["reqwest-client"] }
opentelemetry-otlp = "0.14.0"
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry_sdk = { version = "0.21.0", features = ["rt-tokio", "trace"] }
osm4routing = "0.5.9"
osmpbfreader = "0.16.1"
osrd_containers = { path = "./osrd_containers" }
paste = "1.0.14"
pathfinding = "4.8.2"
postgis_diesel = { version = "2.3.0", features = ["serde"] }
postgres-openssl = "0.5.0"
rand = "0.8.5"
rangemap = { workspace = true }
redis = { version = "0.24.0", features = [
    "tokio-comp",
    "connection-manager",
    "cluster-async",
    "tokio-native-tls-comp",
] }
reqwest = { version = "0.11.23", features = ["json"] }
sentry = "0.32.1"
sentry-actix = "0.32.1"
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_qs = { version = "0.12.0", features = ["actix4"] }
serde_yaml = "0.9.30"
sha1 = "0.10"
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.56"
tokio = "*"
tokio-postgres = "*"
tracing = { version = "0.1.40", features = ["log"] }
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
utoipa = { workspace = true }
uuid = { version = "1.8.0", features = ["v4"] }
validator = { version = "0.16.1", features = ["derive"] }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
pretty_assertions = "1.4.0"
rstest = "0.18.2"
serial_test = "3.0.0"
tempfile = "3.9.0"
