[package]
name = "osrd_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
# used for cargo test, build, fix, package, bench, doc, tree
default-members = [".", "actix_proxy", "actix_auth"]
members = [".", "actix_proxy", "actix_auth"]

[workspace.dependencies]
actix = "0.13.3"
actix-files = "0.6.5"
actix-session = "0.8"
actix-web = "4.4.1"
actix-web-actors = "4.2.0"
actix-web-httpauth = "0.8"
actix-web-opentelemetry = { version = "0.16.0", features = ["awc", "metrics"] }
awc = { version = "3.3.0", features = ["rustls"] }  # the http / ws client
base64ct = "1.6.0"
bytestring = "1.3.1"
dyn-clone = "1.0.16"
either = "1.9.0"
env_logger = "0.10.2"

# main crate
figment = "0.10.14"
futures = "0.3.29"
futures-util = "0.3.30"
humantime = "2.1.0"
humantime-serde = "1.1.1"

# reverse proxy dependencies
ipnet = "2.9"
# common utils
log = "0.4.20"
openidconnect = { version = "3.5.0", default-features = false }
opentelemetry = "0.21.0"
opentelemetry-datadog = { version = "0.9.0", features = ["reqwest-client"] }
opentelemetry-otlp = "0.14.0"
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio-current-thread", "metrics"] }
percent-encoding = "2.3.1"
phf = "0.11.2"

# actix_auth
reqwest = { version = "0.11.24", default-features = false, features = ["rustls-tls-native-roots"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.109"
smallvec = "1.13.1"
thiserror = "1.0.53"
url = "2.5.0"


[dependencies]
actix-files = { workspace = true }
actix-session = { workspace = true, features = ["cookie-session"] }

# web server
actix-web = { workspace = true }
actix-web-opentelemetry = { workspace = true }
actix_auth = { path = "./actix_auth" }
actix_proxy = { path = "./actix_proxy" }
base64ct = { workspace = true }  # to parse the session secret key
either = { workspace = true }
env_logger = { workspace = true }

# configuration parsing
figment = { workspace = true, features = ["toml", "env"] }
humantime = { workspace = true }
humantime-serde = { workspace = true }
log = { workspace = true }

# tracing / metrics
opentelemetry = { workspace = true }
opentelemetry-datadog = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
serde = { workspace = true }
