[package]
name = "actix_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
actix-session = { workspace = true }
actix-web = { workspace = true }

# bearer
actix-web-httpauth = { workspace = true } # only used to parse Bearer auth headers
dyn-clone = { workspace = true }
futures-util = { workspace = true }

# common dependencies
log = { workspace = true }
openidconnect = { workspace = true, features = ["reqwest", "jwk-alg"] }

# oidc
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
