[package]
name = "actix_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]

# websocket proxy
actix = { workspace = true }

# common proxying infrastructure
actix-web = { workspace = true }
actix-web-actors = { workspace = true }
actix-web-opentelemetry = { workspace = true }
awc = { workspace = true }  # the http / ws client
bytestring = { workspace = true }
dyn-clone = { workspace = true }
either = { workspace = true }
futures-util = { workspace = true }
ipnet = { workspace = true }
# common dependencies
log = { workspace = true }

# tracing / metrics
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
percent-encoding = { workspace = true }
phf = { workspace = true, features = ["macros"] } # static hop-by-hop header map

# header classifier
smallvec = { workspace = true }
